# rust-mode

./: .editorconfig  .gitignore  .travis.yml  LICENSE  README.md  SConstruct  configure.ac  meson.build  source-grabber.sh
pch/: error_pch.hpp  iterator_pch.hpp  utils_pch.hpp
src/: Makefile.am  error.hpp  iterator.hpp  main.hpp  utils.hpp
src/error/: option.hpp  result.hpp
src/exceptions/: err_cast_exception.cpp  err_cast_exception.hpp  infinite_range_exception.cpp  infinite_range_exception.hpp  none_cast_exception.cpp  none_cast_exception.hpp  unknown_value_exception.cpp  unknown_value_exception.hpp
src/iterator/: all_range_modifiers.hpp  basic_range.hpp  chained_range.hpp  cycled_range.hpp  filtered_range.hpp  inspected_range.hpp  iterator.hpp  mapped_range.hpp  range.hpp  range_modifier.hpp  sequence.cpp  sequence.hpp  took_range.hpp  took_while_range.hpp  zipped_range.hpp
src/utils/: errors.hpp  print.hpp
tests/: SConscript  error_testing.cpp  iterator_testing  iterator_testing.cpp  readme_error_example.cpp  readme_iterator_example.cpp  readme_utils_example.cpp  utils_testing.cpp
